# notifications_sprint_1

./: .env.dev.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
actions_api/: Dockerfile  app.py  conteiner.py  entrypoint.sh  env.sample  extensions.py  pyproject.toml
actions_api/actions/: confirm.py  router.py  test.py  unsubscribe.py
actions_api/core/: config.py  logger.py
actions_api/models/: action.py  db.py  enum.py
actions_api/modules/: security.py  updater.py
admin/: Dockerfile  entrypoint.sh  env.sample  pyproject.toml
admin/config/: urls.py  wsgi.py
admin/notification_admin/: admin.py  apps.py  models.py
consumer/: Dockerfile  config.py  email_consumer.py  entrypoint.sh  env.sample  message.py  requirements.txt
consumer/scheduler/: email_sender.py  event.html
email_templates/: welcome.html
event_generator/: Dockerfile  config.py  env.sample  main.py  pyproject.toml
event_generator/configs/: events.json  queries.json  tables.json
event_generator/models/: models.py
event_generator/modules/: generator.py  loader.py  manager.py
events_etl/: Dockerfile  config.py  entrypoint.sh  env.sample  main.py  pyproject.toml
events_etl/configs/: queries.json  tables.json
events_etl/models/: models.py
events_etl/modules/: extractor.py  loader.py  manager.py  transformer.py
publisher/: Dockerfile  entrypoint.sh  env.sample  main.py
publisher/core/: config.py
publisher/database/: database.py  db.py  rabbit.py
publisher/service/: rabbit_service.py
services/nginx/: Dockerfile  (+1 more)
(+22 files in other folders)
