[tool.poetry]
name = "actions_api"
version = "0.1.0"
description = ""
authors = ["Artsektor <artsektor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
gevent = "^21.12.0"
psycopg2 = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
pydantic = "^1.9.0"
itsdangerous = "^2.0.1"
dependency-injector = "^4.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
