[tool.poetry]
name = "event_generator"
version = "0.1.0"
description = ""
authors = ["Artsektor <artsektor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
pydantic = "^1.9.0"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
